tests/trybuild_unavailable_panicking_macros/bump_vec_list.stderr
error: the potentially panicking api of `bump_vec!` is not available
       help: enable `bump-scope`'s "panic-on-alloc" feature or use `try`:
       `bump_vec![try in bump; 1, two, 3]`
 --> tests/unavailable_panicking_macros/bump_vec_list.rs:4:5
  |
4 |     bump_vec![in bump; 1, two, 3]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__bump_vec_panic_on_alloc` which comes from the expansion of the macro `bump_vec` (in Nightly builds, run with -Z macro-backtrace for more info)
